--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
               </ul>
           </div>
           <div id="content-title"><u>Skills & Interests</u></div>
-          <h6>Skills: Strategic planning;Onboarding;HRMS(ADP,Workday,Taleo);Teamwork and Collaboration;Outlook;Soft skills;Technological aptitude;Organization;</h6>
-          <h6>Interests: Technology;Board games;Traveling;Personal Development;
+
+          <p>Skills: Strategic planning;Onboarding;HRMS(ADP,Workday,Taleo);Teamwork and Collaboration;Outlook;Soft skills;Technological aptitude;Organization;</p>
+          <p>Interests: Technology;Board games;Traveling;Personal Development;</p>
       </div>
   </body>
 </html>
