--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container">
       <img src="tim.jpg" id="pic" style="width:230px;height:250px;">
       <h1>Timothy Dinh</h1>
-      <h2>3018 W 78th S.| Richfield, MN 55423 |651-755-9140| <a href="http://www.linkedin/in/timd96">LinkedIn</a>| dinhx121@umn.edu</h2>
+      <h2>3018 W 78th S.| Richfield, MN 55423 |651-755-9140| <a href="www.linkedin.com/in/timd96">LinkedIn</a>| dinhx121@umn.edu</h2>
       <div id="content-title"><u>Education</u></div>
       <h3>University of Minnesota - Twin Cities</h3>
       <h4>Bachelor of Science, Human Resources Development</h5>
