--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <h3>Target Corporation</h3>
           <div class="block-date">
                 <div class="dateblock">May 2019 - Present</div>
-            <h4>Sr. Staffling Specialist</h4>
+            <h4>Sr. Staffing Specialist</h4>
             <ul>
               <li>Coordinate with recruiters and candidates to schedule interviews</li>
               <li>Administer coding assessments</li>
